--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/*------------------------------------colors*/
+/*------------------------------------Colors*/
 .bg-color-name-title {
     background-color: #676767;
 }
@@ -17,7 +17,27 @@
 .ui-menu-color-download {
     background-color: #525252;
 }
-/*------------------------------------heading*/
+/*------------------------------------Special Paddings/Margins/Text*/
+
+h1,h2,h3,h4 {
+    margin: 0;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.general-sub {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    color: #fafafa;
+}
+
+inline-block {
+    display: inline-block;
+}
+
+/*------------------------------------Heading*/
 
 header {
     margin: 0;
@@ -92,9 +112,60 @@ header {
     letter-spacing: 2px;
 }
 
-/*----------------------------------------------------hover*/
+/*-------------------------------------Hover*/
 .hvr-sweep-to-bottom:before{
     background: rgba(0,0,0, 0.2);
     height: 120px;
     
+}
+/*--------------------------------------Footer*/
+
+footer {
+    background-color: #525252;
+    color:#fafafa;
+    min-height: 120px;
+    margin: 0;
+}
+
+footer .cv-pdf i {
+    color: #fafafa;
+    text-align: center;
+    font-size: 18px;
+    padding-left: 5px;
+}
+
+footer .cv-pdf i:hover {
+    color: #e84610;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.social-links {
+    padding-bottom: 15px;
+}
+
+.social-links li a i {
+    width: 35px;
+    height: 35px;
+    padding: 12px 0;
+    border-radius: 50%;
+    font-size: 13px;
+    line-height: 7px;
+    text-align: center;
+    color: #fafafa;
+    background: #8f8f8f;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.social-links li a i:hover {
+    background: #e84610;
+}
+
+#footer-details {
+    margin: 20px;
 }
