--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -17,6 +17,10 @@
 .ui-menu-color-download {
     background-color: #525252;
 }
+
+.bg-color-three-reasons {
+    background-color: #ffffff;
+}
 /*------------------------------------Special Paddings/Margins/Text*/
 
 h1,h2,h3,h4 {
@@ -33,10 +37,26 @@ h1,h2,h3,h4 {
     color: #fafafa;
 }
 
-inline-block {
+.inline-block {
     display: inline-block;
 }
 
+.section-column {
+    padding: 0 30px 30px;
+    float: none;
+    display: table-cell;
+}
+
+.row-table {
+    display: table;
+}
+
+.section-heading{
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
 /*------------------------------------Heading*/
 
 header {
@@ -84,7 +104,7 @@ header {
 .menu-item {
     height: 120px;
     padding: 0;
-    text-align: center
+    text-align: center;
 }
 
 .menu-item a {
@@ -169,3 +189,15 @@ footer .cv-pdf i:hover {
 #footer-details {
     margin: 20px;
 }
+
+/*------------------------------------------------------three-reasons*/
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
+    
+} 
