--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -21,6 +21,10 @@
 .bg-color-three-reasons {
     background-color: #ffffff;
 }
+
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
 /*------------------------------------Special Paddings/Margins/Text*/
 
 h1,h2,h3,h4 {
@@ -39,12 +43,6 @@ h1,h2,h3,h4 {
 
 .inline-block {
     display: inline-block;
-}
-
-.section-column {
-    padding: 0 30px 30px;
-    float: none;
-    display: table-cell;
 }
 
 .row-table {
@@ -201,3 +199,52 @@ footer .cv-pdf i:hover {
     margin-bottom: 15px;
     
 } 
+/*------------------------------------------------------personal-info*/
+.personal-info-item {
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+}
+
+.personal-info-item .key,
+.personal-info-item .value {
+    padding-right: 8px;
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin:0;
+}
+
+.personal-info-item .key {
+    display: inline-block;
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+    padding-left: 8px;
+}
+
+.personal-info-item .key p {
+    font-weight: 700;
+}
+
+.personal-info-item .value {
+    display: inline-block;
+    position: relative;
+    width: 60%;
+}
+
+
+/*------------------------------------------------------media query*/
+@media (min-width: 992px) {
+    .section-column {
+        padding: 0 30px 30px;
+        float: none;
+        display: table-cell;
+    } 
+    .personal-info-item .key {
+        padding-left: 0;
+    }
+}
+
