--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -25,6 +25,10 @@
 .bg-color-personal-info {
     background-color: #f4f4f4;
 }
+
+.bg-color-work-history {
+    background-color: #9b59b6;
+}
 /*------------------------------------Special Paddings/Margins/Text*/
 
 h1,h2,h3,h4 {
@@ -48,13 +52,14 @@ h1,h2,h3,h4 {
 .row-table {
     display: table;
 }
-
+.history-heading,
 .section-heading{
     font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 40px;
 }
+
 /*------------------------------------Heading*/
 
 header {
@@ -235,8 +240,71 @@ footer .cv-pdf i:hover {
     width: 60%;
 }
 
+/*------------------------------------------------------Skills*/
 
-/*------------------------------------------------------media query*/
+.progress {
+    position: relative;
+    height: 25px;
+}
+.progress-type {
+    position: absolute;
+    left: 0;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25,25,25, 0.2);
+}
+
+.progress-section {
+    margin: 40px 20px;
+}
+/*------------------------------------------------------Skills*/
+.timeline-item {
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:before {
+    content: attr(dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo", sans-serif;
+    font-weight: 500;
+    font-size: .8em;
+    padding: 0;
+    margin: 0;
+} 
+
+.timeline-item:after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content:'';
+    background: #fafafa;
+} 
+
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
+.history-items {
+    margin-bottom: 30px;
+}
+/*------------------------------------------------------Media Query*/
 @media (min-width: 992px) {
     .section-column {
         padding: 0 30px 30px;
